--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a website for a fictional campsites review website.",
   "source": "index.html",
   "scripts": {
-    "start": "parcel --open",
+    "start": "parcel --open chrome",
     "build": "parcel build"
   },
   "repository": {
@@ -20,10 +20,11 @@
   "homepage": "https://github.com/nucamp/webfun-nucampsite-cdn#readme",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.9.3",
-    "parcel": "^2.9.3"
+    "parcel": "^2.11.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.1",
     "bootstrap": "^5.2.3"
-  }
+  },
+  "main": "scripts.js"
 }
